--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: Staatliches;
+    src: url('../assets/fonts/Staatliches-Regular.ttf');
+}
+
+@font-face {
+    font-family: OpenSansLight;
+    src: url('../assets/fonts/OpenSansCondensed-Light.ttf');
+}
+
+@font-face {
+    font-family: OpenSansBold;
+    src: url('../assets/fonts/OpenSansCondensed-Bold.ttf');
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    color:white;
+    font-family: OpenSansLight;
+}
+
+h1,h2{
+    font-family: Staatliches;
+}
+
+h3,h4,h5{
+    font-family: OpenSansBold;
+}
+
+p{
+    font-family: OpenSansLight;
+}
+
+.menu-link-selected-icon{
+    @apply filter drop-shadow-md;
+}
+
+.menu-link-selected-text{
+    @apply text-red-600;
+}
