--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,12 @@
     padding: 0;
 }
 
+html { 
+    height: 100vh; 
+}
+
 body{
+    height: 100%; 
     color:white;
     font-family: OpenSansLight;
 }
