--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,12 +22,18 @@
     padding: 0;
 }
 
+
 html { 
     height: 100vh; 
+    overflow: hidden;
+    width: 100%;
 }
 
 body{
-    height: 100%; 
+    height: 100%;
+    position: fixed;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     color:white;
     font-family: OpenSansLight;
 }
